# homeiq

./: .gitignore  README.md  main.py  pyproject.toml  sprint2_app.py  sprint2_tools.py  sprint5_advanced.py  sprint5_eval.py  sprint5_rag.py  sprint6_baseline.py  sprint6_data.py  sprint6_neural_net.py  sprint8_client_demo.py  sprint8_deploy.py  sprint8_modal_app.py  sprint8_price_predictor.py
homeiq_documents/: hoa_agreement.txt  inspection_report.txt  market_notes.txt
vector_db/: chroma.sqlite3
